# 88-FPT

./: readme.md
trainer/: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  flake.nix  pyproject.toml
trainer/examples/imagenet1k/mobilenetv2/: exec.py
trainer/examples/imagenet1k/pot/: resnet18_int4.py  resnet18_rscm4.py
trainer/examples/imagenet1k/resnets/: exec_int.py  exec_rscm.py
trainer/examples/scripts/: demonstrator.py  run_experiments.py
trainer/sets/: RSCM3.txt  RSCM4.txt  RSCM5.txt  RSCM6.txt  RSCM7.txt  parse_rscm_sets.py
trainer/src/hatorch/: __init__.py
trainer/src/hatorch/datasets/: __init__.py  cifar10.py  cifar100.py  dataloader.py  datasename.py  imagenet.py  mnist.py
trainer/src/hatorch/layers/: dequantize.py  quantize.py  quantized_averagepool2d.py  quantized_conv2d.py  quantized_conv2d_bn_relu.py  quantized_dropout.py  quantized_inverted_residual.py  quantized_linear.py  quantized_maxpool2d.py  (+4 more)
trainer/tests/layers/: test_folded_bn_running_stats_switch.py  test_quantized_averagepool2d.py  test_quantized_conv2d_bn_relu.py
trainer/tests/models/: test_models_init.py  test_models_quantization.py  test_models_weights.py
trainer/tests/quantizers/: test_bias_quantizer.py  test_lns1_quantizer.py  test_lsq_non_uniform_quantizer.py  test_lsq_uniform_quantizer.py  test_quantization_framework.py
trainer/tests/trainer/: test_trainer.py  test_training_args.py
trainer/tests/transforms/: test_autoset_objective.py  test_weight_mode_config.py
trainer/tests/utils/: test_example_utils.py  test_model_quantizer.py
(+7341 files in other folders)
