# https://packaging.python.org/en/latest/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatorch"
version = "1.0.0"
description = "Hardware Aware PyTorch"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "pytorchcv>=0.0.73"
]

[project.optional-dependencies]
cpu = ["torch>=2.9.1", "torchvision>=0.24.1", "pytorchcv>=0.0.73"]

cu130 = ["torch>=2.9.1", "torchvision>=0.24.1", "pytorchcv>=0.0.73"]

dev = ["pytest>=9.0.1"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
